[package]
name = "margo"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "A feature-rich Wayland compositor"
keywords = ["wayland", "compositor", "tiling", "smithay", "wm"]

[[bin]]
name = "margo"
path = "src/main.rs"

[dependencies]
margo-config = { path = "../margo-config" }
margo-ipc = { path = "../margo-ipc" }

anyhow.workspace = true
bitflags.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
calloop.workspace = true
wayland-server.workspace = true
wayland-client.workspace = true
wayland-backend.workspace = true
wayland-scanner.workspace = true
xkbcommon.workspace = true

input = { version = "0.10", features = ["libinput_1_21"] }
drm-fourcc = "2.2"
drm-ffi = "0.9"
bytemuck = { version = "1", features = ["derive"] }
libc = "0.2"
keyframe = { version = "1.1", default-features = false }
nix = { version = "0.29", features = ["signal", "process"] }
xcursor.workspace = true
log = "0.4"
regex = "1"
# Embedded scripting engine for `~/.config/margo/init.rhai`.
# Pure-Rust, no C deps. Used by `crate::scripting` to run user
# scripts at startup; eventually hosts focus / tag / map event
# hooks once those are exposed.
rhai = { version = "1", default-features = false, features = ["std", "no_optimize"] }

# ── xdp-gnome screencast shim deps (niri pattern, feature-gated) ─────────────
# margo implements `org.gnome.Mutter.ScreenCast` as a D-Bus service so
# `xdg-desktop-portal-gnome` can serve the ScreenCast portal in
# Helium / Chromium / Firefox meeting clients (Window + Entire Screen
# tabs). Without this shim, xdp-gnome silently fails because it
# expects gnome-shell on the bus. Reference: niri/src/dbus/.
#
# All four are gated behind the `xdp-gnome-screencast` feature
# (default-on). Distros / VM tenants who don't need the portal can
# build with `--no-default-features` and skip the zbus + pipewire
# transitive trees entirely (~280 crates → ~120). Power users
# scripting margo from a tty can do the same.
#
# zbus 5 — D-Bus async runtime + interface macros.
# pipewire — PipeWire stream the captured frames flow through.
# async-io — runtime zbus/pipewire share.
zbus = { version = "5", optional = true }
pipewire = { version = "0.9", features = ["v0_3_33"], optional = true }
async-io = { version = "2", optional = true }
async-channel = { version = "2", optional = true }

[features]
default = ["xdp-gnome-screencast"]
# Enables the D-Bus surface (gnome screencast shim + screenshot
# shim + display-config / introspect / service-channel). Requires
# zbus + async-io + async-channel; omitting this drops `mctl`'s
# windows_changed signalling and the entire portal path.
dbus = ["dep:zbus", "dep:async-io", "dep:async-channel"]
# Full screencast portal (Mutter D-Bus shims wired to a PipeWire
# stream pipeline). Implies `dbus`. Drop this for VM/headless
# builds, or builds that don't need browser screen-share.
xdp-gnome-screencast = ["dbus", "dep:pipewire"]

[dependencies.smithay]
workspace = true
features = [
    "backend_drm",
    "backend_egl",
    "backend_gbm",
    "backend_libinput",
    "backend_session_libseat",
    "backend_udev",
    "backend_winit",
    "desktop",
    "renderer_gl",
    "renderer_pixman",
    "renderer_multi",
    "use_system_lib",
    "wayland_frontend",
    "xwayland",
]

# ── Dev / test dependencies ──────────────────────────────────────────────────
# `insta` — snapshot-style assertions (string-based). Used by the
# layout-algorithm test matrix in `layout::snapshot_tests` to lock the
# arrangement geometry of every layout × scenario combo. Each layout
# function is pure (`ArrangeCtx -> Vec<(idx, Rect)>`) so we don't need
# a live compositor — the snapshots commit to repo, regressions show
# up as a one-line text diff at PR time. cargo-insta is the optional
# review CLI (`cargo install cargo-insta`).
[dev-dependencies]
insta = "1"
