[package]
name = "mdots"
version = "1.1.0"
edition = "2021"
rust-version = "1.74"
authors = ["Kenan Pelit <kenanpelit@gmail.com>"]
description = "Declarative package + dotfiles manager for the margo desktop (forked from dcli)"
license = "GPL-3.0-or-later"
repository = "https://github.com/kenanpelit/margo"

[[bin]]
name = "mdots"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
clap = { version = "4.5", features = ["derive", "cargo"] }
clap_complete = "4.5"
clap_mangen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
colored = "2.1"
env_logger = "0.11"
log = "0.4"
walkdir = "2.5"
glob = "0.3"
which = "7.0"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.10"
hostname = "0.4"
indicatif = "0.17"
ratatui = "0.28"
crossterm = "0.28"
tempfile = "3.8"
mlua = { version = "0.10", features = ["lua54", "vendored", "serialize"] }
dirs = "5.0"
