[package]
name = "midle"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Idle manager for the margo Wayland compositor (ext-idle-notify-v1)"

[[bin]]
name = "midle"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tokio = { version = "1", default-features = false, features = [
  "rt",
  "rt-multi-thread",
  "macros",
  "net",
  "io-util",
  "time",
  "process",
  "signal",
  "sync",
] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
wayland-client = { workspace = true }
wayland-protocols = { version = "0.32", features = ["client", "staging"] }
libc = "0.2"
# Inhibitor sources.
procfs = { version = "0.18", default-features = false }
regex = "1"
futures = { version = "0.3", default-features = false, features = ["std"] }
# zbus reactor MUST stay on the async-io backend — the margo compositor
# pulls in zbus via mctl and runs it from its calloop loop WITHOUT a
# tokio runtime. Cargo unifies features across the workspace, so
# enabling `tokio` here would force margo to panic at startup with
# "there is no reactor running". async-io spawns its own thread;
# midle's tokio runtime can `.await` zbus futures regardless of the
# reactor. `default-features = false` alone strips the implicit
# async-io feature too (zbus refuses to compile with neither), so it
# must be re-enabled explicitly.
zbus = { version = "5", default-features = false, features = ["async-io"] }
