[package]
name = "mlogind"
description = "margo's TUI login / display manager (fork of lemurs)"
# Forked from lemurs (https://github.com/coastalwhite/lemurs) by
# Gijs Burghoorn, MIT OR Apache-2.0. See LICENSE-MIT / LICENSE-APACHE.
authors = [
    "Gijs Burghoorn <me@gburghoorn.com>",
    "Kenan Pelit <kenanpelit@gmail.com>",
]
license = "MIT OR Apache-2.0"
version.workspace = true
# Kept on edition 2021 for the initial fork; migrate to the workspace
# 2024 edition as a follow-up once it builds + the rename pass is done.
edition = "2021"
rust-version = "1.84.0"
readme = "README.md"

[dependencies]
# The greeter ⇄ runner protocol, shared with mgreet.
mlogind-proto = { path = "../mlogind-proto" }
# UI and TUI interface
ratatui = "0.21.0"
crossterm = "0.26"
unicode-width = "0.1"
# Live clock on the greeter (matches mlock's centred clock).
chrono = { version = "0.4", default-features = false, features = ["clock"] }

mio = { version = "0.8.8", features = ["os-poll", "os-ext"] }

deentry = "0.0.1"

# Interacting with the kernel interfaces
rand = "0.9"
nix = "0.23.1"

# UTMPX
libc = "0.2"

# Authentication and Fetching User Data
pam = "0.7.0"
uzers = "0.11"
# Scrubs the plaintext login password from the heap on drop.
zeroize = "1.8"

# Once Cell
once_cell = "1.17.1"

# Logging
env_logger = { version = "0.9.0", default-features = false, features = [
    "humantime",
] }
log = "0.4.0"

# Configuration File Parsing
toml = "0.9.11"
serde = { version = "1.0", features = ["derive"] }

[lints]
workspace = true
