[package]
name = "mshell"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Bar shell for the margo Wayland compositor (GTK4 + gtk4-layer-shell)"

[[bin]]
name = "mshell"
path = "src/main.rs"

# --------------------------------------------------------------------
# Stack: GTK4 + gtk4-layer-shell for the Wayland layer-surface bar.
# Replaces the previous iced/wgpu implementation — the iced port off
# ashell was hard to bend into a saimoom/eww-style design, GTK4 lets
# us load the eww.scss as a real GtkCssProvider stylesheet and gives
# native hover-reveal / circular-progress (via GtkDrawingArea).
# --------------------------------------------------------------------
[dependencies]
gtk = { package = "gtk4", version = "0.9", features = ["v4_12"] }
gtk4-layer-shell = "0.5"
glib = "0.20"
gio = "0.20"

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
# `log` is bridged into `tracing` automatically when the subscriber
# is up; the wallpaper renderer was written against `log::*` and we
# pull it in unchanged.
log = "0.4"
libc = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

# Wallpaper renderer — own Wayland client thread (no swww, no
# external daemon). Binds wlr-layer-shell directly, decodes images
# to ARGB8888 with `image`, attaches via `wl_shm`. The same pattern
# wpaperd / pandora ship; canonical Wayland wallpaper approach.
image = { version = "0.25", default-features = false, features = [
  "jpeg",
  "png",
  "webp",
] }
smithay-client-toolkit = { version = "0.19", default-features = false, features = [
  "calloop",
] }
wayland-client = "0.31"
