[package]
name = "mvpn"
version.workspace = true
edition.workspace = true
license = "MIT"
repository.workspace = true
rust-version.workspace = true
description = "Native Mullvad VPN control for margo — CLI + GTK4 layer-shell panel"

[[bin]]
name = "mvpn"
path = "src/main.rs"

[dependencies]
# CLI + config
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
# GUI — GTK4 + layer-shell pinned to the workspace gtk4 0.10 generation
# (matches mkeys/mshell). The panel themes itself by reading margo's matugen
# palette cache at runtime (~/.cache/margo/mshell-colors.toml), no mshell-* dep.
gtk4 = { version = "0.10", features = ["v4_12"] }
gtk4-layer-shell = "0.7"
glib = "0.20"
async-channel = "2"

[lints]
workspace = true
