[package]
name = "mwizard"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shim that opens margo's in-shell setup wizard menu over D-Bus"

[[bin]]
name = "mwizard"
path = "src/main.rs"

[dependencies]
clap.workspace = true
anyhow.workspace = true
tokio.workspace = true
zbus.workspace = true

[lints]
workspace = true
