[package]
name = "start-margo"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Watchdog / supervisor launcher for the margo Wayland compositor — restart-on-crash with a budget, systemd `sd_notify`, graceful signal forwarding"

[[bin]]
name = "start-margo"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
margo-logging = { path = "../margo-logging" }
tracing = { workspace = true }
libc = "0.2"

[dev-dependencies]
libc = "0.2"

[lints]
workspace = true
